<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.github.gossie</groupId>
		<artifactId>nf-content-planner-parent</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	<artifactId>nf-content-planner-backend</artifactId>
	<name>nf-content-planner-backend</name>
	<packaging>pom</packaging>
	
	<properties>
		<java.version>17</java.version>
	</properties>
	
	<modules>
		<module>core</module>
		<module>persistence</module>
		<module>rest</module>
		<module>app</module>
	</modules>
	
</project>
